--- a/WebApplication1/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Login.cshtml
@@ -1,10 +1,13 @@
 ﻿@using WebApplication1.Models
+@using Microsoft.AspNet.Identity
 @model LoginViewModel
 @{
     ViewBag.Title = "Выполнить вход";
 }
 
 <h2>@ViewBag.Title.</h2>
+@if (Request.IsAuthenticated)
+{
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
@@ -56,6 +59,11 @@
         </section>
     </div>
 </div>
+}
+else
+{
+
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
