--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
 <h2>Index</h2>
 @if(Request.IsAuthenticated)
 {
-    Html.Action("Index", "Manage");
+    Html.ActionLink("Index", "Manage");
 }
 else
 {
-    Html.Action("Login", "Account");
+    Html.ActionLink("Login", "Account");
 }
