--- a/WebApplication1/WebApplication1/Views/Manage/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Manage/Index.cshtml
@@ -6,58 +6,94 @@
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-<div>
+<div class="tab-content">
     <h4>Учетная запись</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>Пароль:</dt>
-        <dd>
-            [
-            @if (Model.HasPassword)
-            {
-                @Html.ActionLink("Смена пароля", "ChangePassword")
-            }
-            else
-            {
-                @Html.ActionLink("Создать", "SetPassword")
-            }
-            ]
-        </dd>
-        <dt>Внешние имена входа:</dt>
-        <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Управление", "ManageLogins") ]
-        </dd>
-        <dt>E-mail:</dt>
-        <dd>
-            @Model.Email [
-            @Html.ActionLink("Email", "ManageLogins") ]
-        </dd>
-    </dl>
-</div>
+    <hr/>
 
-<div>
-    <h4>Locations list</h4>
-    @using (Html.BeginForm("Create", "Location", FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
-    {
-        <div class="form-group">
-            <div class="col-md-2">
-                <input type="submit" class="btn btn-default" value="Create Location" />
+        <ul class="nav nav-tabs">
+            <li class="active"> <a data-toggle="tab" href="#panel1">Главная</a></li>
+            <li><a data-toggle="tab" href="#panel2">Объекты</a></li>
+            <li><a data-toggle="tab" href="#panel3">Сотрудники</a></li>
+        </ul> 
+    <div class="tab-content">
+        <div id="panel1" class="tab-pane fade in active">
+            <dl class="dl-horizontal">
+                <dt>Пароль:</dt>
+                <dd>
+                    [
+                    @if (Model.HasPassword)
+                    {
+                        @Html.ActionLink("Смена пароля", "ChangePassword")
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Создать", "SetPassword")
+                    }
+                    ]
+                </dd>
+                <dt>Внешние имена входа:</dt>
+                <dd>
+                    @Model.Logins.Count [
+                    @Html.ActionLink("Управление", "ManageLogins") ]
+                </dd>
+                <dt>E-mail:</dt>
+                <dd>
+                    @Model.Email [
+                    @Html.ActionLink("Email", "ManageLogins") ]
+                </dd>
+            </dl>
+        </div>
+        <div id="panel2" class="tab-pane fade">
+            <div>
+                <h4>Locations list</h4>
+                @using (Html.BeginForm("CreateLocation", "Location", FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
+                {
+                    <div class="form-group">
+                        <div class="col-md-2">
+                            <input type="submit" class="btn btn-default" value="Create Location" />
+                        </div>
+                    </div>
+                }
+            </div>
+            <div>
+                @for (int i = 0; i < Model.Locations.Count; i++)
+                {
+                    <h5> Объект @(i + 1)</h5>
+                    <ul>
+                        <li> @Model.Locations[i].Title</li>
+                        <li>@Model.Locations[i].SecondTitle</li>
+                        <li>@Model.Locations[i].Customer</li>
+                    </ul>
+                }
             </div>
         </div>
-    }
+        <div id="panel3" class="tab-pane fade">
+            <div>
+                <h4>Users list</h4>
+                @using (Html.BeginForm("Register", "Account", FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
+                {
+                    <div class="form-group">
+                        <div class="col-md-2">
+                            <input type="submit" class="btn btn-default" value="Create new User" />
+                        </div>
+                    </div>
+                }
+            </div>
+            <div>
+                @if (Model.Role == "Admin")
+                { 
+                    for (int i = 0; i < Model.ApplicationUsers.Count; i++)
+                    {
+                        <h5> Пользователь @(i + 1)</h5>
+                        <ul>
+                            <li>@Model.ApplicationUsers[i].FirstName</li>
+                            <li>@Model.ApplicationUsers[i].SecondName</li>
+                            <li>@Model.ApplicationUsers[i].Email</li>
+                        </ul>
+                    }
+                }
+            </div>
+        </div>
+    </div>
 </div>
-<div>
-    @for (int i = 0; i < Model.Locations.Count; i++)
-    {
-        <h5> Объект @(i+1)</h5>
-        <ul>
-            <li> @Model.Locations[i].Title</li>
-            <li>@Model.Locations[i].SecondTitle</li>
-            <li>@Model.Locations[i].Customer</li>
-        </ul>
-    }
-</div>
-<div>
-    <h4>Locations list</h4>
-</div>
+
