--- a/WebApplication1/WebApplication1/Areas/Location/Views/Location/Create.cshtml
+++ b/WebApplication1/WebApplication1/Areas/Location/Views/Location/Create.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Create", "Location", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Create", "Location", new { area = "Location"}, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Создать новый объект.</h4>
