--- a/WebApplication1/WebApplication1/Views/Manage/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Manage/Index.cshtml
@@ -10,11 +10,12 @@
     <h4>Учетная запись</h4>
     <hr/>
 
-        <ul class="nav nav-tabs">
-            <li class="active"> <a data-toggle="tab" href="#panel1">Главная</a></li>
-            <li><a data-toggle="tab" href="#panel2">Объекты</a></li>
-            <li><a data-toggle="tab" href="#panel3">Сотрудники</a></li>
-        </ul> 
+    <ul class="nav nav-tabs">
+        <li class="active"> <a data-toggle="tab" href="#panel1">Главная</a></li>
+        <li><a data-toggle="tab" href="#panel2">Объекты</a></li>
+        <li><a data-toggle="tab" href="#panel3">Сотрудники</a></li>
+        <li><a data-toggle="tab" href="#panel4">Тест</a></li>
+    </ul> 
     <div class="tab-content">
         <div id="panel1" class="tab-pane fade in active">
             <dl class="dl-horizontal">
@@ -46,7 +47,7 @@
         <div id="panel2" class="tab-pane fade">
             <div>
                 <h4>Locations list</h4>
-                @using (Html.BeginForm("CreateLocation", "Location", new { area = "" }, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
+                @using (Html.BeginForm("CreateLocation", "Location", new { area = "Location" }, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
                 {
                     <div class="form-group">
                         <div class="col-md-2">
@@ -81,7 +82,7 @@
             </div>
             <div>
                 @if (Model.Role == "Admin")
-                { 
+                {
                     for (int i = 0; i < Model.ApplicationUsers.Count; i++)
                     {
                         <h5> Пользователь @(i + 1)</h5>
@@ -91,6 +92,19 @@
                             <li>@Model.ApplicationUsers[i].Email</li>
                         </ul>
                     }
+                }
+            </div>
+        </div>
+        <div id="panel4" class="tab-pane fade">
+            <div>
+                <h4>Test Link</h4>
+                @using (Html.BeginForm("Index", "Test", new { area = "Location" }, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
+                {
+                    <div class="form-group">
+                        <div class="col-md-2">
+                            <input type="submit" class="btn btn-default" value="Create Location" />
+                        </div>
+                    </div>
                 }
             </div>
         </div>
