--- a/WebApplication1/WebApplication1/Areas/Location/Views/Location/CreateLocation.cshtml
+++ b/WebApplication1/WebApplication1/Areas/Location/Views/Location/CreateLocation.cshtml
@@ -24,9 +24,9 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Customer, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Customers, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Customer, new { @class = "form-control" })
+            @Html.DropDownList("Заказчик", ViewBag.Customers as SelectList)
         </div>
     </div>
     <div class="form-group">
