--- a/WebApplication1/WebApplication1/Areas/Location/Views/Location/CreateLocation.cshtml
+++ b/WebApplication1/WebApplication1/Areas/Location/Views/Location/CreateLocation.cshtml
@@ -26,7 +26,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Customers, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("Заказчик", ViewBag.Customers as SelectList)
+            @Html.DropDownListFor(ViewBag.Customers)
         </div>
     </div>
     <div class="form-group">
